[gd_scene load_steps=11 format=3 uid="uid://b7xgnwr6jl2v3"]

[ext_resource type="Script" path="res://bird_puzzle.gd" id="1_eqw0b"]
[ext_resource type="Texture2D" uid="uid://dkh71hv252fp3" path="res://Assets/PuzzleFred/PuzzleFred.png" id="1_nxe1q"]
[ext_resource type="Texture2D" uid="uid://ddd6747skupy" path="res://Assets/PuzzleFred/Culprit.png" id="2_4lepf"]
[ext_resource type="Texture2D" uid="uid://3th07fgkxdql" path="res://Assets/PuzzleFred/A.png" id="2_j5bhc"]
[ext_resource type="Texture2D" uid="uid://gp11p3h0iueo" path="res://Assets/PuzzleFred/B.png" id="3_ti2nt"]
[ext_resource type="Texture2D" uid="uid://bv20hxhdw6m4q" path="res://Assets/PuzzleFred/C.png" id="4_lthsg"]
[ext_resource type="Texture2D" uid="uid://4j3b6hnwdyqa" path="res://Assets/PuzzleFred/D.png" id="5_64u22"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_usdsa"]
bg_color = Color(0, 0, 0, 0.756863)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="Theme" id="Theme_5j6pd"]
Button/styles/normal = SubResource("StyleBoxFlat_usdsa")

[sub_resource type="Theme" id="Theme_s1it8"]
Label/constants/outline_size = 8

[node name="BirdPuzzle" type="Node2D"]
script = ExtResource("1_eqw0b")

[node name="Culprit" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(288, 162)
texture = ExtResource("2_4lepf")

[node name="CulpritLabel" type="Label" parent="Culprit"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -288.0
offset_top = -229.0
offset_right = -288.0
offset_bottom = -162.0
grow_horizontal = 2
grow_vertical = 0
text = "¡Ha sido C!"
horizontal_alignment = 1

[node name="Fondo" type="Sprite2D" parent="."]
position = Vector2(288, 162)
texture = ExtResource("1_nxe1q")

[node name="FadeRect" type="ColorRect" parent="."]
z_index = 3
offset_right = 575.0
offset_bottom = 325.0
color = Color(0, 0, 0, 1)

[node name="SpriteA" type="Sprite2D" parent="."]
position = Vector2(198, 40)
texture = ExtResource("2_j5bhc")

[node name="DialogA" type="Label" parent="SpriteA"]
visible = false
offset_left = 44.0
offset_top = -35.0
offset_right = 196.0
offset_bottom = -12.0
text = "¡B se las ha comido!"

[node name="ButtonA" type="Button" parent="SpriteA"]
custom_minimum_size = Vector2(30, 30)
offset_right = 8.0
offset_bottom = 8.0
theme = SubResource("Theme_5j6pd")
theme_override_constants/outline_size = 0
text = "A"
icon_alignment = 1

[node name="SpriteB" type="Sprite2D" parent="."]
position = Vector2(358, 104)
texture = ExtResource("3_ti2nt")

[node name="DialogB" type="Label" parent="SpriteB"]
visible = false
offset_left = -107.0
offset_top = -31.0
offset_right = 45.0
offset_bottom = -8.0
text = "¡Ha sido D!"

[node name="ButtonB" type="Button" parent="SpriteB"]
custom_minimum_size = Vector2(30, 30)
offset_right = 8.0
offset_bottom = 8.0
theme = SubResource("Theme_5j6pd")
theme_override_constants/outline_size = 0
text = "B"
icon_alignment = 1

[node name="SpriteC" type="Sprite2D" parent="."]
position = Vector2(198, 176)
texture = ExtResource("4_lthsg")

[node name="DialogC" type="Label" parent="SpriteC"]
visible = false
offset_left = -77.0
offset_top = -70.0
offset_right = 75.0
offset_bottom = -47.0
text = "¡Yo no he sido!"

[node name="ButtonC" type="Button" parent="SpriteC"]
custom_minimum_size = Vector2(30, 30)
offset_right = 8.0
offset_bottom = 8.0
theme = SubResource("Theme_5j6pd")
theme_override_constants/outline_size = 0
text = "C"
icon_alignment = 1

[node name="SpriteD" type="Sprite2D" parent="."]
position = Vector2(375, 261)
texture = ExtResource("5_64u22")

[node name="DialogD" type="Label" parent="SpriteD"]
visible = false
offset_left = -80.0
offset_top = -65.0
offset_right = 72.0
offset_bottom = -42.0
text = "B está mintiendo..."

[node name="ButtonD" type="Button" parent="SpriteD"]
custom_minimum_size = Vector2(30, 30)
offset_right = 8.0
offset_bottom = 8.0
theme = SubResource("Theme_5j6pd")
theme_override_constants/outline_size = 0
text = "D"
icon_alignment = 1

[node name="ConfirmButton" type="Button" parent="."]
offset_left = 485.0
offset_top = 288.0
offset_right = 572.0
offset_bottom = 319.0
text = "Confirmar"

[node name="Label" type="Label" parent="."]
offset_left = 19.0
offset_top = 265.0
offset_right = 279.0
offset_bottom = 314.0
theme = SubResource("Theme_s1it8")
text = "¿Quién se ha comido las semillas?
Solo uno dice la verdad..."
horizontal_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(288, 162)
zoom = Vector2(1.5, 1.5)
